# CAID-tutorial

./: .env.example  .gitignore  JOURNEY.md  README.md  SETUP_PAPERBENCH_LOCAL.md  WSL_TROUBLESHOOTING.md  config.py  pyproject.toml  run_infer.py
core/: manager.py  patches.py  subagent.py  utils.py
docs/: index.md
docs/architecture/: system-design.md
docs/concepts/: manager.md  subagents.md  workflow.md
docs/getting-started/: prerequisites.md  quickstart.md
docs/guides/: add-a-task.md  extend-with-agentic-features.md  interpret-output.md
docs/overview/: key-concepts.md  what-is-this.md
docs/reference/: configuration.md  output-files.md
docs/troubleshooting/: common-issues.md
judge/: judge_runner.py
prompts/: commit0.yaml  paperbench.yaml
scripts/: run_multi.sh  run_single.sh
tasks/: __init__.py  base.py  commit0.py  paperbench.py
tasks/hooks/: pre-commit
